chore(java_indexer): bump JDK from 15 to 25